fix for prev and next button
they were not visible

--- a/Kwc/Basic/ImageEnlarge/EnlargeTag/ImagePage/Component.css
+++ b/Kwc/Basic/ImageEnlarge/EnlargeTag/ImagePage/Component.css
@@ -16,3 +16,7 @@
     position: relative;
     overflow: hidden;
 }
+.cssClass .prevBtn,
+.cssClass .nextBtn {
+    z-index: 1;
+}
